Fix navbar rendering on mobile and small screens
- Remove wrapping containers and flexboxes from nav partial.
- Make navbar collapse at medium breakpoint. This avoids the scrunched
  view shown in the screenshots in #38.
- Add CSS to expand navbar cells when the navbar is collapsed and open
  at full width, with centered text.

--- a/src/_header.scss
+++ b/src/_header.scss
@@ -7,6 +7,17 @@
   padding-top: 48px;
 }
 
+.navbar .collapse.show .nav-item,
+.navbar .collapsing .nav-item {
+  width: 100%;
+}
+
+.navbar .collapse.show .nav-link,
+.navbar .collapsing .nav-link {
+  width: 100%;
+  text-align: center;
+}
+
 .nav-link:hover {
   background: $hyperbola-body-color;
   color: $hyperbola-bg-dark;
